--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,9 @@
     <!-- maven-war-plugin -->
     <version.war.plugin>2.1.1</version.war.plugin>
     
-    <version.picketlink>2.5.2.Final</version.picketlink>
+    <version.picketlink>2.6.0-SNAPSHOT</version.picketlink>
+    
+    <version.xwidgets>1.0-SNAPSHOT</version.xwidgets>
 
     <!-- maven-compiler-plugin -->
     <version.compiler.plugin>3.1</version.compiler.plugin>
@@ -104,6 +106,13 @@
       <scope>compile</scope>
       <version>${version.picketlink}</version>
     </dependency>
+    
+    <dependency>
+      <groupId>org.xwidgets</groupId>
+      <artifactId>xwidgets</artifactId>
+      <version>${version.xwidgets}</version>
+    </dependency>
+    
   </dependencies>
 
   <build>
