--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
     <maven.compiler.target>1.6</maven.compiler.target>
     <version.picketlink>2.6.0-SNAPSHOT</version.picketlink>
+    <version.forge>2.1.1.Final</version.forge>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -91,6 +92,33 @@
       <groupId>javax.ws.rs</groupId>
       <artifactId>javax.ws.rs-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.jboss.forge.furnace</groupId>
+      <artifactId>furnace</artifactId>
+      <version>${version.forge}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.forge.furnace</groupId>
+      <artifactId>furnace-se</artifactId>
+      <version>${version.forge}</version>
+    </dependency>
+    <dependency>
+       <groupId>org.jboss.forge.furnace</groupId>
+       <artifactId>furnace-manager-resolver-maven</artifactId>
+       <version>${version.forge}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.forge.addon</groupId>
+      <artifactId>ui</artifactId>
+      <version>${version.forge}</version>
+      <classifier>forge-addon</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.forge.addon</groupId>
+      <artifactId>forge-bootstrap</artifactId>
+      <version>${version.forge}</version>
+    </dependency>
+    
   </dependencies>
   <build>
     <finalName>${project.artifactId}</finalName>
