--- a/pom.xml
+++ b/pom.xml
@@ -1,161 +1,149 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  
-  <parent>
-    <groupId>org.jboss</groupId>
-    <artifactId>jboss-parent</artifactId>
-    <version>14</version>
-  </parent>  
-  
-  <groupId>org.forgeide</groupId>
-  <artifactId>forge-ide</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
-  <name>Forge IDE</name>
-  <description>Forge IDE</description>
-  <url>http://www.forgeide.org</url>
-  <licenses>
-    <license>
-      <name>Apache License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-  <properties>
-    <version.xwidgets>1.0-SNAPSHOT</version.xwidgets>
-    <version.compiler.plugin>3.1</version.compiler.plugin>
-    <version.war.plugin>2.1.1</version.war.plugin>
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
-    <maven.compiler.target>1.6</maven.compiler.target>
-    <version.picketlink>2.6.0-SNAPSHOT</version.picketlink>
-    <version.forge>2.1.1.Final</version.forge>
-    <version.forge.addons>2.1.1.Final</version.forge.addons>
-  </properties>
-  <dependencyManagement>
-    <dependencies>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+   <modelVersion>4.0.0</modelVersion>
+
+   <parent>
+      <groupId>org.jboss</groupId>
+      <artifactId>jboss-parent</artifactId>
+      <version>14</version>
+   </parent>
+
+   <groupId>org.forgeide</groupId>
+   <artifactId>forge-ide</artifactId>
+   <version>1.0-SNAPSHOT</version>
+   <packaging>war</packaging>
+   <name>Forge IDE</name>
+   <description>Forge IDE</description>
+   <url>http://www.forgeide.org</url>
+   <licenses>
+      <license>
+         <name>Apache License, Version 2.0</name>
+         <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+         <distribution>repo</distribution>
+      </license>
+   </licenses>
+   <properties>
+      <version.xwidgets>1.0-SNAPSHOT</version.xwidgets>
+      <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
+      <version.picketlink>2.6.0-SNAPSHOT</version.picketlink>
+      <version.forge>2.1.1.Final</version.forge>
+      <version.forge.addons>2.1.1.Final</version.forge.addons>
+   </properties>
+   <dependencyManagement>
+      <dependencies>
+         <dependency>
+            <groupId>org.jboss.spec</groupId>
+            <artifactId>jboss-javaee-6.0</artifactId>
+            <version>3.0.2.Final</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+         <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0</version>
+         </dependency>
+      </dependencies>
+   </dependencyManagement>
+   <dependencies>
       <dependency>
-        <groupId>org.jboss.spec</groupId>
-        <artifactId>jboss-javaee-6.0</artifactId>
-        <version>3.0.2.Final</version>
-        <type>pom</type>
-        <scope>import</scope>
+         <groupId>org.jboss.spec.javax.ejb</groupId>
+         <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+         <version>1.0.2.Final</version>
+         <scope>provided</scope>
       </dependency>
       <dependency>
-        <groupId>javax.ws.rs</groupId>
-        <artifactId>javax.ws.rs-api</artifactId>
-        <version>2.0</version>
+         <groupId>javax.enterprise</groupId>
+         <artifactId>cdi-api</artifactId>
+         <version>1.1</version>
+         <scope>provided</scope>
       </dependency>
-    </dependencies>
-  </dependencyManagement>
-  <dependencies>
-    <dependency>
-      <groupId>org.jboss.spec.javax.ejb</groupId>
-      <artifactId>jboss-ejb-api_3.1_spec</artifactId>
-      <version>1.0.2.Final</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.enterprise</groupId>
-      <artifactId>cdi-api</artifactId>
-      <version>1.1</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.spec.javax.annotation</groupId>
-      <artifactId>jboss-annotations-api_1.1_spec</artifactId>
-      <version>1.0.1.Final</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.hibernate.javax.persistence</groupId>
-      <artifactId>hibernate-jpa-2.0-api</artifactId>
-      <version>1.0.1.Final</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.picketlink</groupId>
-      <artifactId>picketlink-api</artifactId>
-      <version>${version.picketlink}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.picketlink</groupId>
-      <artifactId>picketlink-impl</artifactId>
-      <version>${version.picketlink}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.xwidgets</groupId>
-      <artifactId>xwidgets</artifactId>
-      <version>${version.xwidgets}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.spec.javax.servlet</groupId>
-      <artifactId>jboss-servlet-api_3.0_spec</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>javax.ws.rs</groupId>
-      <artifactId>javax.ws.rs-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.forge.furnace</groupId>
-      <artifactId>furnace</artifactId>
-      <version>${version.forge}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.forge.furnace</groupId>
-      <artifactId>furnace-se</artifactId>
-      <version>${version.forge}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.forge.addon</groupId>
-      <artifactId>ui</artifactId>
-      <version>${version.forge}</version>
-      <classifier>forge-addon</classifier>
-    </dependency>
-    
-  </dependencies>
-  <build>
-    <finalName>${project.artifactId}</finalName>
-    <plugins>
-    
-      <plugin>
+      <dependency>
+         <groupId>org.jboss.spec.javax.annotation</groupId>
+         <artifactId>jboss-annotations-api_1.1_spec</artifactId>
+         <version>1.0.1.Final</version>
+         <scope>provided</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.hibernate.javax.persistence</groupId>
+         <artifactId>hibernate-jpa-2.0-api</artifactId>
+         <version>1.0.1.Final</version>
+         <scope>provided</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.picketlink</groupId>
+         <artifactId>picketlink-api</artifactId>
+         <version>${version.picketlink}</version>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.picketlink</groupId>
+         <artifactId>picketlink-impl</artifactId>
+         <version>${version.picketlink}</version>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.xwidgets</groupId>
+         <artifactId>xwidgets</artifactId>
+         <version>${version.xwidgets}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.spec.javax.servlet</groupId>
+         <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>javax.ws.rs</groupId>
+         <artifactId>javax.ws.rs-api</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.jboss.forge.furnace</groupId>
-         <artifactId>furnace-maven-plugin</artifactId>
+         <artifactId>furnace</artifactId>
          <version>${version.forge}</version>
-         <executions>
-            <execution>
-               <id>deploy-addons</id>
-               <phase>prepare-package</phase>
-               <goals>
-                  <goal>addon-install</goal>
-               </goals>
-               <inherited>false</inherited>
-               <configuration>
-                  <addonRepository>${basedir}/src/main/webapp/WEB-INF/addon-repository</addonRepository>
-                  <addonIds>
-                     <addonId>org.jboss.forge.addon:core,${version.forge.addons}</addonId>
-                  </addonIds>
-               </configuration>
-            </execution>
-         </executions>
-      </plugin>    
-    
-      <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>${version.war.plugin}</version>
-        <configuration>
-          <failOnMissingWebXml>false</failOnMissingWebXml>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.jboss.as.plugins</groupId>
-        <artifactId>jboss-as-maven-plugin</artifactId>
-        <version>${version.jboss.maven.plugin}</version>
-      </plugin>
-    </plugins>
-  </build>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.forge.furnace</groupId>
+         <artifactId>furnace-se</artifactId>
+         <version>${version.forge}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.forge.addon</groupId>
+         <artifactId>ui</artifactId>
+         <version>${version.forge}</version>
+         <classifier>forge-addon</classifier>
+      </dependency>
+
+   </dependencies>
+   <build>
+      <finalName>${project.artifactId}</finalName>
+      <plugins>
+
+         <plugin>
+            <groupId>org.jboss.forge.furnace</groupId>
+            <artifactId>furnace-maven-plugin</artifactId>
+            <version>${version.forge}</version>
+            <executions>
+               <execution>
+                  <id>deploy-addons</id>
+                  <phase>prepare-package</phase>
+                  <goals>
+                     <goal>addon-install</goal>
+                  </goals>
+                  <inherited>false</inherited>
+                  <configuration>
+                     <addonRepository>${basedir}/src/main/webapp/WEB-INF/addon-repository</addonRepository>
+                     <addonIds>
+                        <addonId>org.jboss.forge.addon:core,${version.forge.addons}</addonId>
+                     </addonIds>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
+
+         <plugin>
+            <groupId>org.jboss.as.plugins</groupId>
+            <artifactId>jboss-as-maven-plugin</artifactId>
+            <version>${version.jboss.maven.plugin}</version>
+         </plugin>
+      </plugins>
+   </build>
 </project>
