--- a/pom.xml
+++ b/pom.xml
@@ -87,10 +87,12 @@
       <dependency>
          <groupId>org.jboss.spec.javax.servlet</groupId>
          <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+         <scope>provided</scope>
       </dependency>
       <dependency>
          <groupId>javax.ws.rs</groupId>
          <artifactId>javax.ws.rs-api</artifactId>
+         <scope>provided</scope>
       </dependency>
       <dependency>
          <groupId>org.jboss.forge.furnace</groupId>
