updated addon dependency

--- a/pom.xml
+++ b/pom.xml
@@ -264,15 +264,10 @@
       </dependency>
 
       <dependency>
-         <groupId>org.jboss.forge.addon</groupId>
-         <artifactId>resources-api</artifactId>
-         <version>${version.forge.addons}</version>
-      </dependency>
-
-      <dependency>
-         <groupId>org.forgeide.addon.resource</groupId>
-         <artifactId>forgeideresource-api</artifactId>
+         <groupId>org.forgeide.addon</groupId>
+         <artifactId>resources</artifactId>
          <version>${project.version}</version>
+         <classifier>forge-addon</classifier>
       </dependency>
 
       <!--dependency>
@@ -303,7 +298,7 @@
                      <addonIds>
                         <addonId>org.jboss.forge.addon:core,${version.forge.addons}</addonId>
                         <addonId>org.jboss.forge.addon:ui-example,${version.forge.addons}</addonId>
-                        <addonId>org.forgeide.addon.resource:forgeideresource,${project.version}</addonId>
+                        <!--addonId>org.forgeide.addon.resource:forgeideresource,${project.version}</addonId-->
                      </addonIds>
                   </configuration>
                </execution>
