--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
       <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
       <version.picketlink>2.6.0-SNAPSHOT</version.picketlink>
       <version.furnace>2.3.0.Final</version.furnace>
-      <version.forge>2.3.0.Final</version.forge>
-      <version.forge.addons>2.3.0.Final</version.forge.addons>
+      <version.forge>2.3.1-SNAPSHOT</version.forge>
+      <version.forge.addons>2.3.1-SNAPSHOT</version.forge.addons>
       <jboss.logging.version>3.1.1.GA</jboss.logging.version>
       <deltaspike.version>0.6</deltaspike.version>
    </properties>
