--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,12 @@
         <artifactId>jboss-websocket-api_1.0_spec</artifactId>
         <version>1.0.0.Final</version>
       </dependency>
+      
+      <dependency>
+        <groupId>javax.json</groupId>
+        <artifactId>javax.json-api</artifactId>
+        <version>1.0</version>
+      </dependency>
 
    </dependencies>
    <build>
