--- a/pom.xml
+++ b/pom.xml
@@ -281,6 +281,12 @@
         <version>1.0</version>
       </dependency>
 
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.2.4</version>
+      </dependency>
+
    </dependencies>
    <build>
       <finalName>${project.artifactId}</finalName>
