--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,21 +2,21 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
 
 	<filter>
-        <filter-name>AuthenticationFilter</filter-name>
-        <filter-class>org.picketlink.authentication.web.AuthenticationFilter</filter-class>
+    <filter-name>AuthenticationFilter</filter-name>
+    <filter-class>org.picketlink.authentication.web.AuthenticationFilter</filter-class>
 
         <!-- As we're using a token to authenticate users in each request, we need a stateless authentication model. And not use at all session cookies on the server. -->
-        <init-param>
-            <param-name>statelessAuthentication</param-name>
-            <param-value>true</param-value>
-        </init-param>
+    <init-param>
+      <param-name>statelessAuthentication</param-name>
+      <param-value>true</param-value>
+    </init-param>
 	</filter>
 
-    <!-- Protect RESTful endpoints -->
-    <filter-mapping>
-        <filter-name>AuthenticationFilter</filter-name>
-        <url-pattern>/rest/commands/*</url-pattern>
-    </filter-mapping>
+  <!-- Protect RESTful endpoints -->
+  <filter-mapping>
+    <filter-name>AuthenticationFilter</filter-name>
+    <url-pattern>/rest/*</url-pattern>
+  </filter-mapping>
 
 	<!-- Force SSL usage -->
 	<security-constraint>
