--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,8 @@
   <!-- Protect RESTful endpoints -->
   <filter-mapping>
     <filter-name>AuthenticationFilter</filter-name>
-    <url-pattern>/rest/*</url-pattern>
+    <url-pattern>/rest/commands/execute/*</url-pattern>
+    <url-pattern>/rest/projects/*</url-pattern>
   </filter-mapping>
 
 	<!-- Force SSL usage -->
