slight refactor, fix JWS authentication

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,7 @@
     <filter-name>AuthenticationFilter</filter-name>
     <url-pattern>/rest/commands/execute/*</url-pattern>
     <url-pattern>/rest/projects/*</url-pattern>
+    <url-pattern>/rest/auth/*</url-pattern>
   </filter-mapping>
 
 	<!-- Force SSL usage -->
